# Distributed-booking-system

./: .gitignore  README.md
client/: Client.java  README.md
docs/: README.md
scripts/: CMakeLists.txt  README.md  build_and_run_windows.bat
server/: CMakeLists.txt  README.md
server/Inc/: Facility.h  Message.h  UdpServer.h  Util.h  udp_server.h
server/Src/: Facility.cpp  UdpServer.cpp  Util.cpp  main.cpp  udp_server.cpp
tests/: README.md  server_test.cpp
